@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- cpsinstall creates a CMF caching_policy_manager instance with a default policy
+  that caches objects of type 'Filesystem Image' for one hour (HTTP headers)
 Bug fixes:
 ~~~~~~~~~~
 - Fixed the cache of the portlet_contact_info custom portlet so that the portlet
